FLOW-1004 FLOW-1005 f-color-picker alignment issue fixed and hea… (#209)
* main FLOW-1004 FLOW-1005 f-color-picker alignment issue fixed and header-input event added in f-table-schema

* FLOW-1004 toogle all rows feature fixed

* FLOW-1004 selectAll row beahvior fixed

--- a/packages/flow-core/src/components/f-color-picker/f-color-picker-global.scss
+++ b/packages/flow-core/src/components/f-color-picker/f-color-picker-global.scss
@@ -6,4 +6,6 @@ f-color-picker {
 	height: fit-content;
 	max-width: 100%;
 	max-height: 100%;
+	display: inline-flex;
+	vertical-align: top;
 }
